# ash_trail

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ACCOUNT_MAPPING_UPDATE.md  AI_DEVELOPMENT_GUIDE.md  AUTHENTICATION_SETUP.md  AUTOMATION_QUICK_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  CRASH_ANALYSIS_AND_FIX.md  CRUD_TEST_COVERAGE.md  E2E_TESTING_GUIDE.md  ENHANCED_WORKFLOW_SUMMARY.md  FIRESTORE_DATA_VALIDATION_REPORT.md  GEOLOCATION_FEATURES.md  GITHUB_TESTFLIGHT_SETUP.md  GMAIL_LOGIN_TEST_GUIDE.md  HOLD_TO_RECORD_IMPLEMENTATION.md  HOLD_TO_RECORD_USAGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  INTEGRATION_CHECKLIST.md  INTEGRATION_TESTS.md  IOS_CRASH_FIX.md  LEGACY_DATA_ARCHITECTURE.md  LEGACY_DATA_COMPLETION.md  LEGACY_DATA_QUICK_REFERENCE.md  LEGACY_DATA_SUPPORT.md  LOCATION_PERMISSIONS_SETUP.md  LOGGING_FEATURES.md  LOGGING_SYSTEM.md  MULTI_USER_SYNC_TEST_COVERAGE.md  PLATFORM_CONSIDERATIONS.md  PLATFORM_GUIDE.md  QUICK_START.md  QUICK_START_LOGGING.md  README.md  SETUP_COMPLETE.md  TESTFLIGHT_DEPLOYMENT.md  (+28 more)
.dev_assistant_telemetry/: workflow_2025-09-16.jsonl
.fvm/: fvm_config.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-context.md  copilot-instructions.md  labels.yml
automation-export/: REVIEW.md  report.md
automation-export/samples/python/: README.md  pyproject.toml
automation-export/samples/python/src/sample_project/: __init__.py
automation-export/samples/python/tests/: test_sample_project.py
automation-export/template/samples/python/: README.md  hello_world.py  pyproject.toml  test_hello_world.py
automation_sessions/: session_20250906T013705.json  session_20250906T013713.json  session_20250906T013746.json  session_20250906T013831.json  session_20250906T015021.json  session_20250906T020248.json  session_20250917T233147.json  session_20250922T002731.json  session_20250922T002755.json  session_20250922T235148.json  session_20250924T012316.json  session_20250924T012558.json
docs/: CAPTURE_SCREENSHOTS.md  DESIGN_SYSTEM.md  EDIT_LOG_ENHANCEMENT.md  FEATURE_PLANS_DECISION_MATRIX.md  FEATURE_PLAN_A_HEALTH_FOCUSED.md  FEATURE_PLAN_B_PATTERN_ANALYSIS.md  FEATURE_PLAN_C_VISUAL_DASHBOARD.md  FEATURE_PLAN_D_GAMIFICATION.md  FIGMA_QUICK_START.md  FIGMA_SETUP.md  FIGMA_TEST_RESULTS.md  FIGMA_WORKFLOW.md  FIGMA_WORKFLOW_SUMMARY.md  IOS_DEPLOYMENT_TARGET_FIX.md  LOGGING_CONVENTIONS.md  MULTI_ACCOUNT_ARCHITECTURE.md  MULTI_ACCOUNT_IMPLEMENTATION.md  README.md  SCREENSHOT_TEST_RESULTS.md  SCREENSHOT_VERIFICATION.md  TESTFLIGHT_CI_FIXES.md  TESTING_STRATEGY.md  TEST_IMPROVEMENTS.md  USER_STORY_TESTS.md  WIDGET_TEST_DOCUMENTATION.md  automation-troubleshooting.md  codecov-integration.md  data-model.md  enhanced-automation-guide.md  enhanced-feature-workflow.md  local-automation-guide.md  mkdocs.yml  prd.md  release-plan.md  requirements.txt  system-architecture.md  testflight_upload_guide.md  testing-strategy.md  theming-system.md  workflow-optimization-plan.md  (+1 more)
features/: insights.charts_time_series_prompt.md
integration_test/: PROGRESS.md  accounts_screen_test.dart  accounts_test.dart  analytics_test.dart  app_e2e_test.dart  auth_provider_integration_test.dart  auth_test.dart  comprehensive_e2e_test.dart  database_integration_test.dart  figma_screenshot_capture.dart  gmail_multi_account_test.dart  history_test.dart  home_screen_test.dart  legacy_data_integration_test.dart  location_collection_test.dart  logging_flow_test.dart  logging_test.dart  login_flow_test.dart  multi_account_sim_test.dart  multi_account_test.dart  navigation_test.dart  screenshot_capture_test.dart  test_bundle.dart  validation_service_integration_test.dart
ios/: ExportOptions.plist  Podfile  fix_watch_platform.rb
lib/: firebase_options.dart  main.dart  main_native.dart  main_web.dart
lib-docs/: firebase_options.md  main.md
linux/: CMakeLists.txt
web/: index.html  (+1 more)
(+1455 files in other folders)
